# linux_library_libdirectfb-nexell

./: .gitignore  README  configure.ac  groups  project.config
rules/: libobject.make
src/: Makefile.am  nexell_debug.c  nexell_debug.h  nexell_g2d.c  nexell_g2d.h  nexell_g2d_gfxdriver.c  nexell_g2d_gfxdriver.h
